--- a/resources/sass/core/_misc.scss
+++ b/resources/sass/core/_misc.scss
@@ -75,7 +75,7 @@ span {
 
 .container-scroller {
   overflow: hidden;
-  min-height: 105vh;
+  // min-height: 105vh;
   background-color: var(--base-color);
 }
 
