--- a/resources/sass/core/navs/_topbar.scss
+++ b/resources/sass/core/navs/_topbar.scss
@@ -42,7 +42,8 @@
       }
 
       &:focus {
-        outline: none;
+        outline: none !important;
+        box-shadow: none !important;
       }
     }
 
